--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,12 @@
-[mysql]
-host="172.16.4.200"
-prot=3306
+[db]
+host="127.0.0.1"
+port=3306
 user="root"
-pwd="123456"
-database="uav_hunan"
+password="123456"
+database="test"
 charset="utf8mb4"
 
-[ot]
-humpNaming=true
+[cfg]
+outDir="./model"
+tableName=["user"]
+packageName="model"
