删除原使用的数据库建表sql读取模式,并重写读取方法,新增可配置第三方数据库类型模式

--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,7 @@ charset="utf8mb4"
 outDir="./model"
 tableNames=["user"]
 packageName="model"
+needTag=["gorm", "json"]
+upperFirstLetter=false
+humpNaming=false
+importOtherType="./fieldOtherType.json"
