--- a/config.toml
+++ b/config.toml
@@ -14,10 +14,10 @@ needTag=["gorm", "json"]
 upperFirstLetter=false
 humpNaming=false
 importOtherType="./fieldOtherType.json"
-webServer=false
+webServer=true
 
-# [application]
-# port=8080
+[application]
+port=8080
 # useHttps=false
 # pemFile=""
 # keyFile=""
